refactor: Rename project to Ap Files Request
Update project name and relevant identifiers across the codebase, including package.json, HTML titles, metadata, layout components, local storage keys, and manifest files. This change ensures the project's branding and internal references are consistent with its intended purpose.

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "EduLink",
-  "name": "EduLink Student Portal",
+  "short_name": "Ap Files",
+  "name": "Ap Files Request",
   "icons": [
     {
       "src": "https://cdn-icons-png.flaticon.com/512/2997/2997235.png",
